--- a/src/app/pages/give/give.scss
+++ b/src/app/pages/give/give.scss
@@ -61,7 +61,7 @@
     }
 
     .amount-boxes {
-        margin: 3rem 0;
+        margin: 3rem auto;
         max-width: 100%;
 
         @include phone {
@@ -76,24 +76,20 @@
             width: 43rem;
         }
 
-        @include desktop {
-            margin: 3rem auto;
-        }
-
-
         form {
             display: flex;
             flex-flow: row wrap;
+            justify-content: center;
             width: 100%;
-
-            @include desktop {
-                justify-content: center;
-            }
 
             [type="submit"] {
                 background-color: color(gold);
                 padding: 2rem 5rem;
                 width: 50%;
+
+                @include phone {
+                    width: 100%;
+                }
             }
         }
 
