--- a/src/app/pages/ap/ap.html
+++ b/src/app/pages/ap/ap.html
@@ -1,25 +1,22 @@
-<main id="maincontent">
-    <div class="hero w-cards">
-        <div class="row container-wrap">
-            <div class="student"></div>
-            <div class="overlay">
-                <div class="text-block">
-                    <h1>Access to Advance</h1>
-                    <p class="blurb">
-                        Nothing should hold students back from becoming who they want
-                        to be. So our College Board framework-aligned books for AP<sup>®</sup>
-                        courses are available online at all times, always up to date. We believe
-                        access can unlock their futures.
-                    </p>
+<template args="model">
+    <main id="maincontent">
+        <div if="model.intro_heading" class="hero w-cards">
+            <div class="row container-wrap">
+                <div class="student"></div>
+                <div class="overlay">
+                    <div class="text-block">
+                        <h1>{model.intro_heading}</h1>
+                        <p class="blurb">{model.intro_description}</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="square-1"></div>
-        <div class="square-2"></div></div>
-    <span class="scrolldown-chevron">
-        <a href="#scroll-here"><i class="fa fa-chevron-down"></i></a>
-    </span>
-    <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
-    <insert-region id="scroll-here" data-name="products"></insert-region>
-    <insert-region data-name="buckets"></insert-region>
-</main>
+            <div class="square-1"></div>
+            <div class="square-2"></div></div>
+        <span class="scrolldown-chevron">
+            <a href="#scroll-here"><i class="fa fa-chevron-down"></i></a>
+        </span>
+        <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
+        <insert-region id="scroll-here" data-name="products" skip="true"></insert-region>
+        <insert-region data-name="buckets" skip="true"></insert-region>
+    </main>
+</template>
