--- a/src/app/pages/partners/partners.html
+++ b/src/app/pages/partners/partners.html
@@ -23,12 +23,16 @@
                     </if>
                 </a>
             </div>
+            <div each="spacer in [1,2,3]" class="spacer logo"></div>
         </div>
+    </div>
+    <div class="divider boxed">
+        <hr />
     </div>
     <div class="blurbs container">
         <div each="partner in model.partners" class="text" id="{partner.title+'-blurb'}">
-            <h2></h2>
-            <p></p>
+            <h3 data-html="partners[{$item}].title"></h3>
+            <div data-html="partners[{$item}].long_description"></div>
             <a href="#filter" class="to-top">Return to top <i class="fa fa-chevron-up"></i></a>
         </div>
     </div>
