--- a/src/app/pages/partners/partners.scss
+++ b/src/app/pages/partners/partners.scss
@@ -31,13 +31,11 @@ $text-dark2: rgba(0, 0, 0, 0.7);
         }
     }
 
-    h2 {
+    h3 {
         margin-bottom: 0;
     }
 
     .icons {
-        @include constrained-variable-text(3, 0.3);
-
         color: color(gray);
         display: block;
         font-weight: 500;
@@ -58,10 +56,15 @@ $text-dark2: rgba(0, 0, 0, 0.7);
         }
 
         .logo {
+            min-width: 22rem;
             padding: 4rem;
 
             &.hidden {
                 display: none;
+            }
+
+            &.spacer {
+                padding: 0;
             }
 
             a {
@@ -90,13 +93,29 @@ $text-dark2: rgba(0, 0, 0, 0.7);
         width: 100%;
     }
 
+    .divider {
+        margin: 0 auto;
+
+        > hr {
+            border: 0;
+            border-bottom: solid 3px color(neutral-lighter);
+            width: 100%;
+        }
+    }
+
     .blurbs {
         align-items: center;
         background-color: color(neutral-lightest);
-        font-size: 1.7rem;
         font-weight: 400;
         margin-bottom: 1.5rem;
-        padding: 3rem;
+
+        @include tablet {
+            padding: 3rem calc(34.7vw - 16rem);
+        }
+
+        @include desktop {
+            padding: 3rem 11.5rem;
+        }
 
         .text {
             align-items: flex-start;
